--- a/magento2/docker-compose.yml
+++ b/magento2/docker-compose.yml
@@ -71,7 +71,7 @@ services:
         depends_on:
             - php-apache
     varnish:
-        build: ./varnish
+        build: ./varnish/varnish5
         hostname: varnish
         domainname: "${APPDOMAIN}"
         expose:
