--- a/magento2/docker-compose.yml
+++ b/magento2/docker-compose.yml
@@ -86,7 +86,7 @@ services:
            - php-apache
         volumes:
           - "${CONTAINERDATA}/${PROJECT_NAME}/data:/home/data"
-          - ./varnish/varnish.vcl:/etc/varnish/default.vcl
+          - ./varnish/varnish5.vcl:/etc/varnish/default.vcl
           - ./varnish/varnish.secret:/etc/varnish/secret
         environment:
           - CACHE_SIZE=64M
