--- a/magento2/docker-compose.yml
+++ b/magento2/docker-compose.yml
@@ -92,7 +92,7 @@ services:
           - CACHE_SIZE=64M
 
     mysql:
-        image: mysql:latest
+        image: mysql:5.7
         hostname: mysql
         domainname: "${APPDOMAIN}"
         volumes:
