--- a/magento2/manager/magento2/php/php.ini
+++ b/magento2/manager/magento2/php/php.ini
@@ -4,10 +4,22 @@
 ; Resource Limits ;
 ;;;;;;;;;;;;;;;;;;;
 
-max_execution_time = 1800
-max_input_time = 60
-memory_limit=1024M
+max_execution_time = 18000
+max_input_time = 300
+memory_limit=4096M
 upload_max_filesize = 32M
+post_max_size = 32M
+max_input_vars=5000
+
+;;;;;;;;;;;;;;;;;;;
+; MAGE            ;
+;;;;;;;;;;;;;;;;;;;
+; https://github.com/magento/magento2/blob/2.2/php.ini.sample
+
+always_populate_raw_post_data = -1
+flag session.auto_start = off
+zlib.output_compression = on
+suhosin.session.cryptua = off
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -44,3 +56,7 @@ sendmail_path = /usr/bin/msmtp -t -i
 
 ; dev / prod
 ;expose_php = off
+; disable xdebug in build
+;xdebug.remote_autostart=0
+;xdebug.remote_enable=0
+;display_errors = Off
