--- a/magento2/docker-compose.yml
+++ b/magento2/docker-compose.yml
@@ -65,12 +65,31 @@ services:
             - mysql
         env_file: .env
 
+    rabbitmq:
+        hostname: rabbitmq
+        domainname: "${APPDOMAIN}"
+        image: rabbitmq:management
+        networks:
+            - wwwserver
+            #- proxy_server
+        depends_on:
+            - php-apache
+        volumes:
+            - "${CONTAINERDATA}/${PROJECT_NAME}/rabbitmq:/var/lib/rabbitmq/mnesia/"
+        environment:
+            - RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS=-rabbitmq_management path_prefix "/rabbitmq"
+        expose:
+            - 15672
+            - 5672
+            - 5673
+
     redis_session:
         build: ./redis/session/
         networks:
             - wwwserver
         depends_on:
             - php-apache
+
     redis_system:
         image: redis:latest
         networks:
@@ -97,6 +116,7 @@ services:
           - ./varnish/varnish.secret:/etc/varnish/secret
         environment:
           - CACHE_SIZE=64M
+
     elasticsearch:
         build: ./elasticsearch
         environment:
@@ -112,6 +132,7 @@ services:
         volumes:
           #- "${CONTAINERDATA}/${PROJECT_NAME}/elasticsearch/data1:/usr/share/elasticsearch/data"
           - "${CONTAINERDATA}/${PROJECT_NAME}/data:/home/data"
+
     mysql:
         image: mysql:5.7
         hostname: mysql
