opcache and php best practice settings for Mage2

--- a/magento2/manager/magento2/Dockerfile
+++ b/magento2/manager/magento2/Dockerfile
@@ -64,6 +64,8 @@ ENV APACHE_LOG_DIR /var/log/apache2
 ENV APACHE_PID_FILE /var/run/apache2.pid
 ENV APACHE_RUN_DIR /var/run/apache2
 ENV APACHE_LOCK_DIR /var/lock/apache2
+# Ensure old PID due to previous usage killed
+RUN rm -f /var/run/apache2/apache2.pid
 
 # configs
 #
