--- a/magento2/manager/magento2/php/php.ini
+++ b/magento2/manager/magento2/php/php.ini
@@ -20,6 +20,8 @@ always_populate_raw_post_data = -1
 flag session.auto_start = off
 zlib.output_compression = on
 suhosin.session.cryptua = off
+realpath_cache_size = 10M
+realpath_cache_ttl = 300
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -43,10 +45,11 @@ short_open_tag = On
 
 opcache.enable = 1
 opcache.enable_cli = 1
-opcache.memory_consumption = 256M
-opcache.max_accelerated_files = 40000
+opcache.memory_consumption = 1024M
+opcache.max_accelerated_files = 65535
 opcache.revalidate_freq = 0
 opcache.revalidate_path = 1
+opcache.save_comments = 1
 
 [Date]
 date.timezone = "Europe/London"
