--- a/magento2/ubuntu/php/php.ini
+++ b/magento2/ubuntu/php/php.ini
@@ -4,10 +4,24 @@
 ; Resource Limits ;
 ;;;;;;;;;;;;;;;;;;;
 
-max_execution_time = 1800
-max_input_time = 60
-memory_limit=2048M
+max_execution_time = 18000
+max_input_time = 300
+memory_limit=4096M
 upload_max_filesize = 32M
+post_max_size = 32M
+max_input_vars=5000
+
+;;;;;;;;;;;;;;;;;;;
+; MAGE            ;
+;;;;;;;;;;;;;;;;;;;
+; https://github.com/magento/magento2/blob/2.2/php.ini.sample
+
+always_populate_raw_post_data = -1
+flag session.auto_start = off
+zlib.output_compression = on
+suhosin.session.cryptua = off
+realpath_cache_size = 10M
+realpath_cache_ttl = 300
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -31,10 +45,11 @@ short_open_tag = On
 
 opcache.enable = 1
 opcache.enable_cli = 1
-opcache.memory_consumption = 256M
-opcache.max_accelerated_files = 40000
+opcache.memory_consumption = 1024M
+opcache.max_accelerated_files = 65535
 opcache.revalidate_freq = 0
 opcache.revalidate_path = 1
+opcache.save_comments = 1
 
 [Date]
 date.timezone = "Europe/London"
@@ -44,3 +59,7 @@ sendmail_path = /usr/bin/msmtp -t -i
 
 ; dev / prod
 ;expose_php = off
+; disable xdebug in build
+;xdebug.remote_autostart=0
+;xdebug.remote_enable=0
+;display_errors = Off
