--- a/magento2/ubuntu/php/php.ini
+++ b/magento2/ubuntu/php/php.ini
@@ -55,7 +55,7 @@ opcache.save_comments = 1
 date.timezone = "Europe/London"
 
 [mail function]
-sendmail_path = /usr/bin/msmtp -t -i
+sendmail_path = /usr/local/etc/msmtprc -t -i
 
 ; dev / prod
 ;expose_php = off
