added amqp config and consumer container

--- a/magento2/.env
+++ b/magento2/.env
@@ -17,6 +17,8 @@ MYSQL_ROOT_PASSWORD=passw0rd
 MYSQL_USER=magento
 MYSQL_PASSWORD=magento
 MYSQL_DATABASE=magento
+AMQP_USER=guest
+AMQP_PASSWORD=guest
 MAGENTO_LANGUAGE=en_GB
 MAGENTO_TIMEZONE=Europe/Berlin
 MAGENTO_DEFAULT_CURRENCY=EUR
