consumer container updates

--- a/magento2/consumer/Dockerfile
+++ b/magento2/consumer/Dockerfile
@@ -1,5 +1,5 @@
 FROM php:7.4-cli-alpine
-LABEL maintainer paj@gaiterjones.com
+LABEL maintainer magento@gaiterjones.com
 # https://github.com/jetrails/docker-magento-alpine/blob/master/src/php-cli-7.4/Dockerfile
 
 RUN apk --update --no-cache add \
@@ -36,20 +36,27 @@ RUN docker-php-ext-install \
 	sockets \
 	xsl \
 	zip
+
 # ensure www-data matches production group id
 RUN groupmod -g 36 xfs
 RUN groupmod -g 33 www-data
 # add new file owner group 1000
-RUN adduser -D -g "" paj
-RUN usermod -u 1000 paj
+RUN adduser -D -g "" magento
+RUN usermod -u 1000 magento
 #RUN usermod -u 33 www-data
 # file owner member of www-data
-RUN usermod -a -G www-data paj
+RUN usermod -a -G www-data magento
+
+# mstmp for email relay
+RUN apk --update --no-cache add \
+	msmtp
+COPY ./conf/msmtprc /etc/msmtprc
+RUN chown magento /etc/msmtprc && chmod 600 /etc/msmtprc && touch /var/log/msmtp.log && chmod 777 /var/log/msmtp.log
 
 #RUN cat /etc/group
 COPY ./conf/php.ini /usr/local/etc/php/php.ini
 COPY ./conf/aliases.sh /etc/profile.d/aliases.sh
 COPY start_consumer.sh /usr/local/start_consumer.sh
-USER paj
+USER magento
 WORKDIR /var/www/dev/magento2
 ENTRYPOINT [ "sh", "-l" ]
