remoteip conf update for apache logging

--- a/magento2/manager/magento2/apache/000-default.conf
+++ b/magento2/manager/magento2/apache/000-default.conf
@@ -5,6 +5,7 @@
 <VirtualHost *:80>
 
 	DocumentRoot /var/www/dev/magento2/pub
+	RemoteIPHeader X-Forwarded-For
 
 	#####################################################
 	# ADMIN
@@ -15,14 +16,6 @@
 	#####################################################
 	# MAGENTO
 	#####################################################
-	#
-	#Include /var/www/dev/magento2/.htaccess-combined
-	#<Directory /var/www/dev/magento >
-	#	Options -Indexes +Multiviews +FollowSymLinks
-	#	AllowOverride None
-	#	Require all granted
-	#</Directory>
-
 	<Directory /var/www/dev/phpRedisAdmin>
 		Options -Indexes +Multiviews +FollowSymLinks
 		AllowOverride None
