--- a/magento2/ubuntu/apache/000-default.conf
+++ b/magento2/ubuntu/apache/000-default.conf
@@ -1,41 +1,36 @@
 # MAGENTO2
 
-# 
+#
 #
 <VirtualHost *:80>
-	
-	DocumentRoot /var/www/dev/magento2
+
+	DocumentRoot /var/www/dev/magento2/pub
+	RemoteIPHeader X-Forwarded-For
+
 	#####################################################
 	# MAGENTO
 	#####################################################
-	# 
-	#Include /var/www/dev/magento2/.htaccess-combined
-	#<Directory /var/www/dev/magento >
-	#	Options -Indexes +Multiviews +FollowSymLinks
-	#	AllowOverride None
-	#	Require all granted
-	#</Directory>	
-	
+	#
 	Alias /phpRedisAdmin "/var/www/dev/phpRedisAdmin/"
-	
+
 	<Directory /var/www/dev/phpRedisAdmin>
 		Options -Indexes +Multiviews +FollowSymLinks
 		AllowOverride None
 		AuthType Basic
 		AuthName "Restricted Content"
 		AuthUserFile /etc/apache2/.htpasswd
-		Require valid-user	
+		Require valid-user
 	</Directory>
-	
+
 	<Directory /var/www/dev>
-	 Options -Indexes +Multiviews +FollowSymLinks 
+	 Options -Indexes +Multiviews +FollowSymLinks
 		AllowOverride All
 		Require all granted
 	</Directory>
 
 	# ifmodules
 	#Include ifmodule.conf
-	
+
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
 	# It is also possible to configure the loglevel for particular
@@ -88,6 +83,5 @@
 			# Header append Vary User-Agent env=!dont-vary
 
 	</IfModule>
-	## COMPRESSION ##	
+	## COMPRESSION ##
 </VirtualHost>
-
